<resources>
    <string name="app_name">Midterm 07570531</string>
    <string name="login_text">Login To Facebook</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="button_login">Login</string>
    <string name="name_profile" translatable="false">Promlert Lovichit</string>
    <string name="add_story">Add to Story</string>
    <string name="view_add">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="live_in">Live in</string>
    <string name="from">From</string>
    <string name="name_school" translatable="false">สวนกุหลาบวิทยาลัย</string>
    <string name="come_from" translatable="false">กรุงเทพมหานคร</string>
    <string name="name_province" translatable="false">กรุงเทพมหานคร</string>
</resources>
