<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.profile">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="384dp"
        android:layout_height="298dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintDimensionRatio="h,397:600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cover" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="256dp"
        android:layout_height="223dp"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/img1"
        app:layout_constraintEnd_toStartOf="@+id/img3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img1"
        app:layout_constraintTop_toBottomOf="@+id/username_profile"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_view_as" />

    <ImageView
        android:id="@+id/img4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/username_profile"
        app:srcCompat="@drawable/ic_more" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/img2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_profile"
        app:srcCompat="@drawable/ic_add_story" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toStartOf="@+id/img4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img2"
        app:layout_constraintTop_toBottomOf="@+id/username_profile"
        app:srcCompat="@drawable/ic_edit_profile" />

    <ImageView
        android:id="@+id/img5"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/img6"
        app:layout_constraintEnd_toStartOf="@+id/go_to_school"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_story"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/ic_study" />

    <ImageView
        android:id="@+id/img6"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toTopOf="@+id/img7"
        app:layout_constraintEnd_toStartOf="@+id/live_in"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img5"
        app:srcCompat="@drawable/ic_live" />

    <ImageView
        android:id="@+id/img7"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/come_from"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img6"
        app:srcCompat="@drawable/ic_from" />

    <TextView
        android:id="@+id/username_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_profile"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        tools:text="@string/name_profile" />

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/more"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/img4"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/more" />

    <TextView
        android:id="@+id/add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/add_story"
        app:layout_constraintEnd_toStartOf="@+id/view_as"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        tools:text="@string/add_story" />

    <TextView
        android:id="@+id/view_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/view_add"
        app:layout_constraintBottom_toBottomOf="@+id/add_story"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_story"
        app:layout_constraintTop_toBottomOf="@+id/img2"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/view_add" />

    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="@+id/view_as"
        app:layout_constraintEnd_toStartOf="@+id/more"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_as"
        app:layout_constraintTop_toBottomOf="@+id/img3"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/edit_profile" />

    <TextView
        android:id="@+id/go_to_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/goes_to"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img5"
        app:layout_constraintEnd_toStartOf="@+id/name_school"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img5"
        app:layout_constraintTop_toTopOf="@+id/img5"
        tools:text="@string/goes_to" />

    <TextView
        android:id="@+id/live_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/live_in"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img6"
        app:layout_constraintEnd_toStartOf="@+id/province"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img6"
        app:layout_constraintTop_toTopOf="@+id/img6"
        tools:text="@string/live_in" />

    <TextView
        android:id="@+id/come_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/from"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img7"
        app:layout_constraintEnd_toStartOf="@+id/from"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img7"
        app:layout_constraintTop_toTopOf="@+id/img7"
        tools:text="@string/from" />

    <TextView
        android:id="@+id/name_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/name_school"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="@+id/go_to_school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/go_to_school"
        app:layout_constraintTop_toTopOf="@+id/go_to_school"
        tools:text="@string/name_school" />

    <TextView
        android:id="@+id/province"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/name_province"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/live_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/live_in"
        app:layout_constraintTop_toTopOf="@+id/live_in"
        tools:text="@string/name_province" />

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/come_from"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/come_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/come_from"
        app:layout_constraintTop_toTopOf="@+id/come_from"
        tools:text="@string/come_from" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>